# media-manager

media-manager-back/: .gitignore  Dockerfile  app.py  config.py  deploy.sh  pyproject.toml  requirements.txt
media-manager-back/models/: instagram.py  youtube.py
media-manager-back/routers/: instagram_router.py  youtube_router.py
media-manager-back/services/: firestore.py  gemini.py  instagram.py  security.py  youtube.py
media-manager-back/utils/: session_state.py
media-manager-front/: Dockerfile  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.js
media-manager-front/src/: App.css  App.jsx  index.css  main.jsx  utils.js
media-manager-front/src/assets/icons/: CollapseIcon.jsx  ExpandIcon.jsx
media-manager-front/src/components/: ChannelsCarousel.jsx  Comment.jsx  CommentSummary.jsx  Home.jsx  ProtectedRoute.jsx  Searchbar.jsx  Toolbar.jsx  Videos.jsx
media-manager-front/src/components/dialogs/: RandomCommentDialog.jsx
media-manager-front/src/context/: AuthContext.jsx
media-manager-front/src/pages/: Home.jsx  Login.jsx  Video.jsx
media-manager-front/src/store/: index.js
media-manager-front/src/store/features/: layout.js  search.js  video.js
